--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,6 +1,7 @@
 {{ $title := site.Title }}
 {{ $desc  := site.Params.description | markdownify }}
-<section class="jumbotron">
+<div class="scalable">
+<div class="jumbotron jumbotron-fluid hero">
   <div class="container">
     <h1>
       {{ $title }}
@@ -12,4 +13,5 @@
     </p>
     {{ end }}
   </div>
-</section>
+</svi>
+</div>
