--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -3,48 +3,40 @@
 {{ $title  := site.Title }}
 {{ $logo   := site.Params.logos.navbar }}
 {{ $menu   := site.Menus.main }}
-{{ $social := site.Params.social }}
 
-<div class="navbar navbar-expand-lg navbar-light bg-light sticky-top" role="navigation" aria-label="main navigation">
+<div class="main-navbar navbar navbar-dark navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{ $home }}">
         {{ if $logo }}
         {{ $url := printf "img/logos/%s" $logo | relURL }}
-          <img src="{{ $url }}" width="200">
+          <img src="{{ $url }}" class="navbar-logo">
         {{ else }}
         {{ $title }}
         {{ end }}
       </a>
     </div>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="float-right">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="main-nav">
-      <ul class="navbar-nav mr-auto">
-        {{ with $menu }}
-        {{ range . }}
-        {{ $isHere := eq .URL $here }}
-        <li class="navbar-start navbar-item{{ if $isHere }} is-active{{ end }}">
-          {{ $isExternal := hasPrefix .URL "http" }}
-          <a class="nav-link" href="{{ .URL }}"{{ if $isExternal }} target="_blank"{{ end }}>
-            {{ .Name }}
-          </a>
+      <div class="collapse navbar-collapse" id="main-nav">
+        <ul class="navbar-nav mr-auto">
+          {{ with $menu }}
+          {{ range . }}
+          {{ $isHere := eq .URL $here }}
+          <li class="navbar-start navbar-item{{ if $isHere }} is-active{{ end }}">
+            {{ $isExternal := hasPrefix .URL "http" }}
+            <a class="nav-link" href="{{ .URL }}"{{ if $isExternal }} target="_blank"{{ end }}>
+              {{ .Name }}
+            </a>
+            {{ end }}
+          </li>
           {{ end }}
-        </li>
-        {{ end }}
-      </ul>
-      <ul class="navbar-nav float-right">
-        {{ with $social }}
-        <li class="navbar-item">
-          {{ partial "social-buttons.html" . }}
-        </li>
-        {{ end }}
-      </ul>
-    </div>
-
-
+        </ul>
+      </div>
+  </div>
   </div> 
 </div>
