add features section
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
 {{ partial "home/hero.html" . }}
+{{ partial "home/features.html" . }}
 {{ partial "home/content.html" . }}
+{{ partial "footer.html" . }}
 {{ end }}
