--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 {{ with site.Copyright }}
 {{ $year := now.Year }}
 <footer class="footer">
-  <div class="container">
+  <div class="container-xl">
     <p>
       &copy; {{ $year }} {{ . }}
     </p>
