--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -133,4 +133,20 @@ nav
   background-image: url('/img/home/hero.jpg')
   background-size: 100%
   height: 100%
+  margin-bottom: 0rem
   //min-height: 582px
+
+
+// layouts/partials/home/features.html 
+
+.home-features 
+  background-color: $o3de-black 
+  background-image: url('/img/home/feature-bg.png')
+  background-size: 100%
+  color: $o3de-white
+
+.feature
+  margin-top: 2rem
+  margin-bottom: 6rem
+  img
+    width: 100%
