--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -49,7 +49,7 @@
 @import "bootstrap/scss/jumbotron" 
 //@import "bootstrap/scss/alert" 
 //@import "bootstrap/scss/progress" 
-//@import "bootstrap/scss/media" 
+@import "bootstrap/scss/media" 
 //@import "bootstrap/scss/list-group" 
 //@import "bootstrap/scss/close" 
 //@import "bootstrap/scss/toasts" 
@@ -70,7 +70,9 @@
 $font-family-headers: "Open Sans" 
 $o3de-black: #000
 $o3de-white: #fff
+$o3de-blue: #1E71EB
 $o3de-lightblue: #D2EDFF
+$o3de-green: #58BD61
 
 // General 
 
@@ -124,17 +126,37 @@ nav
 // layouts/partials/hero.html
 
 //scales the header proportionally
-.scalable
-  min-height: 582px
-  height: 70vh
+$width: '59vw';
 
-
+.scalable 
+    width: 100%
+    height: calc((#{$width} / 3) * 2); // note the variable is declared inside #${}
+    background: black
+    filter: drop-shadow(0px 15px 15px rgba(0, 0, 0, 0.9))
+    background-image: url('/img/home/hero.jpg')
+    background-size: cover
+    @include media-breakpoint-down(lg) 
+      height: auto 
+      background-position: right
+    
+    
 .hero 
-  background-image: url('/img/home/hero.jpg')
-  background-size: 100%
-  height: 100%
   margin-bottom: 0rem
-  //min-height: 582px
+  background-color: transparent
+  color: $o3de-white
+  .desc
+    text-shadow: 8px 8px 8px #000
+
+
+.learnmore-cta 
+  background-color: $o3de-green
+  a:active
+    background-color: darken($o3de-green, 10%)
+
+.download-cta 
+  background-color: $o3de-blue
+  a:active 
+    background-color: darken($o3de-blue, 10%)
 
 
 // layouts/partials/home/features.html 
