--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,17 +1,26 @@
 {{ $title := site.Title }}
 {{ $desc  := site.Params.description | markdownify }}
 <div class="scalable">
-<div class="jumbotron jumbotron-fluid hero">
-  <div class="container">
-    <h1>
-      {{ $title }}
-    </h1>
+  <div class="jumbotron jumbotron-fluid hero">
+    <div class="container">
+      <div class="row">
+        <div class="col col-12 col-xl-7">
+          <h1 class="title">
+            {{ $title }}
+          </h1>
 
-    {{ with $desc }}
-    <p class="lead">
-      {{ . }}
-    </p>
-    {{ end }}
+          {{ with $desc }}
+          <p class="desc">
+            {{ . }}
+          </p>
+          {{ end }}
+
+          <p class="buttons">
+            <a href="#" class="my-3 mr-3 btn btn-lg text-white download-cta">Download</a>
+            <a href="#" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
-</svi>
 </div>
