--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -42,7 +42,7 @@
 //@import "bootstrap/scss/custom-forms" 
 @import "bootstrap/scss/nav" 
 @import "bootstrap/scss/navbar" 
-//@import "bootstrap/scss/card" 
+@import "bootstrap/scss/card" 
 //@import "bootstrap/scss/breadcrumb" 
 //@import "bootstrap/scss/pagination" 
 //@import "bootstrap/scss/badge" 
@@ -164,7 +164,7 @@ $width: '59vw';
 .home-features 
   background-color: $o3de-black 
   background-image: url('/img/home/feature-bg.png')
-  background-size: 100%
+  background-size: cover
   color: $o3de-white
 
 .feature
