Add partners section to homepage
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -172,3 +172,8 @@ $width: '59vw';
   margin-bottom: 6rem
   img
     width: 100%
+
+// layouts/partials/home/partners.html 
+
+.home-logo 
+  max-width: 100%
