--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,7 @@
 {{ partial "home/hero.html" . }}
 {{ partial "home/features.html" . }}
 {{ partial "home/get-started.html" . }}
+{{ partial "home/partners.html" . }}
 {{ partial "home/content.html" . }}
 {{ partial "footer.html" . }}
 {{ end }}
