try a different background style
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -163,8 +163,9 @@ $width: '59vw';
 
 .home-features 
   background-color: $o3de-black 
-  background-image: url('/img/home/feature-bg.png')
-  background-size: cover
+  background-image: url('/img/home/feature-bg-2.png')
+  background-position: center
+  background-repeat: no-repeat
   color: $o3de-white
 
 .feature
