Small css fixes
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -150,13 +150,13 @@ $width: '59vw';
 
 .learnmore-cta 
   background-color: $o3de-green
-  a:active
-    background-color: darken($o3de-green, 10%)
+  &:hover
+    background-color: darken(#58BD61, 10%)
 
 .download-cta 
   background-color: $o3de-blue
-  a:active 
-    background-color: darken($o3de-blue, 10%)
+  &:hover 
+    background-color: darken(#1E71EB, 10%)
 
 
 // layouts/partials/home/features.html 
