--- a/layouts/partials/menu-loop.html
+++ b/layouts/partials/menu-loop.html
@@ -29,9 +29,9 @@
       </a>
 
       {{ if .HasChildren }}
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
           {{ range .Children }}
-            <a class="dropdown-item" 
+            <a class="dropdown-item bg-dark text-white" 
             href="{{ .URL }}" 
             {{ if eq .Post "external" }} target="_blank" {{ end }}>
               {{ .Name }}
@@ -41,9 +41,6 @@
       {{ end }}
     </li>
   {{ end }}
-  <li class="parent-menu-item sm:self-start">
-    <a href="https://twitter.com/OCI_ORG" class="p-2" target="_blank" title="follow us on Twitter"><ion-icon name="logo-twitter" class="pt-1"></ion-icon></a>
-  </li>
 {{ end }}
   
 
