--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -1,14 +1,11 @@
-
 {{ range . }}
 {{ $color := .color | default "white" }}
-<a class="btn text-light" style="background-color: {{ .color }}">
+<a class="social btn text-light mr-1" title="{{ .name }}" style="background-color: {{ .color }}" href="{{ .url }}" target="_blank">
     {{ with .icon }}
     <span class="icon">
       <i class="{{ . }}"></i>
     </span>
     {{ end }}
-    {{ with .name }}
-      {{ . }}
-    {{ end }}
   </a>
 {{ end }}
+
