Initial commit for docs layouts
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -6,14 +6,13 @@
           <hr />
           {{ partial "docs/docs-nav.html" . }}
         </section>
-        <section class="col col-xl-8 docs-content pl-5">
+        <section class="col col-xl-8 docs-content p-5">
+          <h1 class="title">{{ .Page.Title | markdownify }}</h1>
           <div>
             {{ partial "single-header.html" . }}
           </div>
           {{ partial "docs/content.html" . }}
-          {{ partial "footer.html" . }}
         </section>
-
       </section>
     </div>
 {{ end }}
