Add breadcrumbs, edit button
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -212,6 +212,7 @@ $width: '59vw';
   box-sizing: border-box
   display: block
   flex-wrap: wrap
+  overflow: scroll
 
 // layouts/section-nav.html 
 
