--- a/layouts/partials/github-edit.html
+++ b/layouts/partials/github-edit.html
@@ -2,7 +2,7 @@
     {{ $repoUrl := .Site.Params.repositoryUrl }}
     {{ $filePath := .File.Path }}
     {{ $editUrl := print $repoUrl "/content/" $filePath }}
-    <a href="{{ $editUrl }}" class="btn btn-primary" target="_blank">
+    <a href="{{ $editUrl }}" class="btn btn-light border float-right" target="_blank">
       <span class="fas fa-pen"></span> &nbsp; Edit on GitHub
     </a>
 </div>
