create docs sidenav
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -213,3 +213,13 @@ $width: '59vw';
   display: block
   flex-wrap: wrap
 
+// layouts/section-nav.html 
+
+.menu-item
+  display: none
+
+.active
+  display: block !important
+
+.currentPage
+  background-color: #333
