--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -6,14 +6,14 @@
 {{ end }}
 
 {{ $isHere := eq .p1 .p2 }}
-<li {{ if $isHere }} class="is-active"{{ end }}>
-  / <a href="{{ .p1.RelPermalink }}">
+<li>
+   <a href="{{ .p1.RelPermalink }}">
     {{ .p1.Title | markdownify }}
-  </a>
+  </a> / &nbsp;
 </li>
 {{ end }}
 
-<div class="col col-8 breadcrumb" aria-label="breadcrumbs">
+<div class="col p-0 breadcrumb" aria-label="breadcrumbs">
   <ul class="mb-0 pt-2" style="vertical-align: middle">
     {{ template "breadcrumb" (dict "p1" . "p2" .) }}
   </ul>
