--- a/layouts/partials/section-nav.html
+++ b/layouts/partials/section-nav.html
@@ -1,33 +1,50 @@
 {{ $allSections  := site.Sections }} <!-- "blog" and "docs" -->
-{{ $docsSections := where $allSections "Section" "docs-snapshot" }} <!-- "getting-started" and "deployment" -->
-{{ $thisUrl      := .RelPermalink }} <!-- the URL of the current page -->
+{{ $docsSections := where $allSections "Section" "docs" }} <!-- "getting-started" and "deployment" -->
+{{ $thisUrl      := .RelPermalink }}
+{{ $thisSection := .CurrentSection.RelPermalink }}
+<!-- thisUrl = {{- $thisUrl -}} -->
 
 {{ range $docsSections }}
-{{ $isThisPage := eq .RelPermalink $thisUrl }}
-<nav class="section-nav">
-      <p class="menu-label">Documentation:</p>
-      <ul class="menu-list">
-        <li><a {{ if $isThisPage }} class="active" {{ end }} href="{{ .RelPermalink }}">{{ .CurrentSection.Title | markdownify }}</a>
-        {{ range .RegularPages }}
-          <ul>
-            <li>
-            <a {{ if $isThisPage }} class="active" {{ end }} href="{{ .RelPermalink }}">
-              {{ .Title | markdownify }}
-            </a>
-            </li>
-          </ul>
+  <nav class="section-nav" id="section-nav">
+    {{ range .Site.Sections }}
+      <div class="accordion" id="accordionExample">
+        <div class="card border-left-0 border-right-0 rounded-0"> <!-- root -->
+          <div class="card-header">
+             <a class="" href="{{ .Permalink }}">
+              <h1>{{ if isset .Params .LinkTitle }} 
+                {{ .CurrentSection.LinkTitle | markdownify }}
+              {{ else }}
+                {{ .CurrentSection.Title | markdownify }}
+              {{ end }}
+              </h1></a>
+          </div>
+        </div>
+        {{ range .Sections }}
+        <div class="card border-left-0 border-right-0 rounded-0">
+          <div class="card-header" id="{{ .CurrentSection.Params.menu_uuid }}">
+              <button class="btn btn-link btn-block text-left collapsed" 
+              type="button" data-toggle="collapse" 
+              data-target="#{{ .CurrentSection.Params.menu_uuid }}collapse" 
+              aria-expanded="true" aria-controls="{{ .CurrentSection.Params.menu_uuid }}collapse">
+                {{ if isset .Params .LinkTitle }} 
+                  {{ .CurrentSection.LinkTitle | markdownify }}
+                {{ else }}
+                  {{ .CurrentSection.Title | markdownify }}
+                {{ end }}
+              </button>
+          </div>
+          <div id="{{ .CurrentSection.Params.menu_uuid }}collapse" 
+          class="menu-body collapse" 
+            aria-labelledby="{{ .CurrentSection.Params.menu_uuid }}" data-parent="#accordionExample">
+            <div class="card-body">
+                {{ partial "section-nav-recurse.html" . }}
+              </ul>
+            </div>
+          </div>
+        </div>
         {{ end }}
-        </li>
-    {{ range .Sections }}
-        <li><a {{ if $isThisPage }} class="active" {{ end }} href="{{ .RelPermalink }}">{{ .CurrentSection.Title | markdownify }}</a>
-          <ul>
-            {{ range .CurrentSection.RegularPages }}
-            <li>
-                <a {{ if $isThisPage }} class="active" {{ end }} href="{{ .RelPermalink }}">{{ .Page.Title | markdownify }}</a>
-            </li>
-            {{ end }}
-          </ul>
-        </li>
+      </div>
     {{ end }}
+  </nav>
 {{ end }}
 </nav>
