--- a/layouts/shortcodes/preview-migrated.html
+++ b/layouts/shortcodes/preview-migrated.html
@@ -1,7 +1,7 @@
 <!-- This shortcode creates a preview box for migrated documentation that has not been updated. -->
 
 <div style="border:2px solid #be1414; border-radius:  6px; margin: 8px 0px; background-color: #faf2f2;">
-    <p style="margin:8px 8px 8px 8px"><img src = "/img/icons/important-icon.svg" alt="icon - important.svg" style="display:inline; width:18pt; height:18pt; float:left; margin:0 8px 0 0"/> 
+    <p style="margin:8px 8px 8px 8px"><img src = "/img/icons/important-icon.svg" alt="icon important" style="display:inline; width:18pt; height:18pt; float:left; margin:0 8px 0 0"/> 
         <span>
             <strong>Preview documentation:</strong> This topic has been migrated from Lumberyard and is provided as a preview. The information contained on this page 
             might not reflect the current or final state of UX, UI, or functionality. The feature(s) described on this page might not be included in the initial Open 
