--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -13,8 +13,8 @@
 </li>
 {{ end }}
 
-<div class="col p-0 breadcrumb" aria-label="breadcrumbs">
-  <ul class="mb-0 pt-2" style="vertical-align: middle">
+<div class="col px-0 py-2 breadcrumb" aria-label="breadcrumbs">
+  <ul class="mb-0" style="vertical-align: middle">
     {{ template "breadcrumb" (dict "p1" . "p2" .) }}
   </ul>
 </div>
