--- a/layouts/docs/section.html
+++ b/layouts/docs/section.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="container-fluid">
       <section class="row flex-xl-nowrap">
-        <section class="col col-xl-5 docs-sidebar p-0">
+        <section class="col d-none d-md-block col-xl-5 docs-sidebar p-0">
           {{ partial "section-nav.html" . }}
         </section>
         <section class="col docs-content pt-3 px-5 pb-3">
@@ -13,7 +13,7 @@
               <h1 class="title">{{ .Page.Title | markdownify }}</h1>
               {{ partial "docs/content.html" . }}     
             </div>
-            <div class="col col-xl-2 pt-3 px-5 pb-3">
+            <div class="col col-12 col-xl-2 pt-5">
               {{ partial "docs/docs-nav.html" . }}
             </div>
         </section>
