--- a/layouts/partials/single-header.html
+++ b/layouts/partials/single-header.html
@@ -2,7 +2,7 @@
   <div class="col">
     {{ partial "breadcrumb.html" . }}
   </div>
-  <div class="col col-2">
+  <div class="col col-12 col-xl-2">
   {{ partial "github-edit.html" . }}
   </div>
 </div>
