Added feeback links to banners.
Signed-off-by: Mike Cronin <mikecro@amazon.com>

--- a/layouts/shortcodes/preview-migrated.html
+++ b/layouts/shortcodes/preview-migrated.html
@@ -5,7 +5,7 @@
         <span>
             <strong>Preview documentation:</strong> This topic has been migrated from Lumberyard and is provided as a preview. The information contained on this page 
             might not reflect the current or final state of UX, UI, or functionality. The feature(s) described on this page might not be included in the initial Open 
-            3D Engine offering.
+            3D Engine offering. To report issues and errors, or to make documentation requests, please open a <a href="https://github.com/o3de/o3de.org/issues">GitHub issue here</a>.
         </span>
     </p>
 </div>
