--- a/layouts/shortcodes/preview-new.html
+++ b/layouts/shortcodes/preview-new.html
@@ -4,7 +4,8 @@
     <p style="margin:8px 8px 8px 8px"><img src = "/img/icons/important-icon.svg" alt="icon important" style="display:inline; width:18pt; height:18pt; float:left; margin:0 8px 0 0"/> 
         <span>
             <strong>Preview documentation:</strong> This topic is a preview. The information contained on this page 
-            might not reflect the current or final state of UX, UI, or functionality of the described feature(s).
+            might not reflect the current or final state of UX, UI, or functionality of the described feature(s).  To report issues and  
+            errors, or to make documentation requests, please open a <a href="https://github.com/o3de/o3de.org/issues">GitHub issue here</a>.
         </span>
     </p>
 </div>
