wire up learn more button
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -16,8 +16,8 @@
           {{ end }}
 
           <p class="buttons">
-            <a href="#" class="my-3 mr-3 btn btn-lg text-white download-cta">Download</a>
-            <a href="#" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
+            <!-- <a href="#" class="my-3 mr-3 btn btn-lg text-white download-cta">Download</a> -->
+            <a href="/content/docs" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
           </p>
         </div>
       </div>
