--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -17,7 +17,7 @@
 
           <p class="buttons">
             <!-- <a href="#" class="my-3 mr-3 btn btn-lg text-white download-cta">Download</a> -->
-            <a href="/content/docs" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
+            <a href="/docs" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
           </p>
         </div>
       </div>
