use short titles
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/partials/section-nav-recurse.html
+++ b/layouts/partials/section-nav-recurse.html
@@ -3,7 +3,7 @@
 {{ range .CurrentSection.Pages }}
 <ul>
   <li><a class="section-nav-link" href="{{ .Permalink }}"> 
-      {{ if isset .Params .LinkTitle }} {{ .Page.LinkTitle | markdownify }} {{ else }} {{ .Page.Title | markdownify }} {{ end }}
+      {{ .Page.LinkTitle | markdownify }}
     </a>
     {{ if .IsSection }}
         {{ partial "section-nav-recurse.html" . }}
