--- a/layouts/partials/section-nav.html
+++ b/layouts/partials/section-nav.html
@@ -11,11 +11,7 @@
         <div class="card border-left-0 border-right-0 rounded-0"> <!-- root -->
           <div class="card-header">
              <a class="" href="{{ .Permalink }}">
-              <h1>{{ if isset .Params .LinkTitle }} 
-                {{ .CurrentSection.LinkTitle | markdownify }}
-              {{ else }}
-                {{ .CurrentSection.Title | markdownify }}
-              {{ end }}
+              <h1>{{ .LinkTitle | markdownify }}
               </h1></a>
           </div>
         </div>
@@ -26,11 +22,7 @@
               type="button" data-toggle="collapse" 
               data-target="#{{ .CurrentSection.Params.menu_uuid }}collapse" 
               aria-expanded="true" aria-controls="{{ .CurrentSection.Params.menu_uuid }}collapse">
-                {{ if isset .Params .LinkTitle }} 
-                  {{ .CurrentSection.LinkTitle | markdownify }}
-                {{ else }}
-                  {{ .CurrentSection.Title | markdownify }}
-                {{ end }}
+                  {{ .LinkTitle | markdownify }}
               </button>
           </div>
           <div id="{{ .CurrentSection.Params.menu_uuid }}collapse" 
