list missing _index.md files in menu
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/partials/section-nav.html
+++ b/layouts/partials/section-nav.html
@@ -29,8 +29,14 @@
           class="menu-body collapse" 
             aria-labelledby="{{ .CurrentSection.Params.menu_uuid }}" data-parent="#accordionExample">
             <div class="card-body">
+                <ul>
+                  <li>
+                  <a class="section-nav-link" href="{{ .Permalink }}"> 
+                    {{ if isset .Params .LinkTitle }} {{ .Page.LinkTitle | markdownify }} {{ else }} {{ .Page.Title | markdownify }} {{ end }}
+                  </a>
+                  </li>
+                </ul>
                 {{ partial "section-nav-recurse.html" . }}
-              </ul>
             </div>
           </div>
         </div>
