--- a/layouts/partials/section-nav.html
+++ b/layouts/partials/section-nav.html
@@ -32,7 +32,7 @@
                 <ul>
                   <li>
                   <a class="section-nav-link" href="{{ .Permalink }}"> 
-                    {{ if isset .Params .LinkTitle }} {{ .Page.LinkTitle | markdownify }} {{ else }} {{ .Page.Title | markdownify }} {{ end }}
+                    {{ .Page.LinkTitle | markdownify }}
                   </a>
                   </li>
                 </ul>
