Refine style of h1 docs nav
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -255,13 +255,16 @@ nav
           margin-bottom: 0rem
           font-weight: normal
 
-#section-nav
-  
-  h1
-    font-size: 1.4rem
-
 .currentPage
   font-weight: bold
   background-color: $o3de-lightblue
   padding: 0.1rem
   border-radius: 5px
+  
+#docs-nav-title
+  background-color: transparent
+  padding: 0rem
+  h1
+    font-size: 1.2rem
+    margin-top: 0
+    margin-bottom: 0
