--- a/layouts/shortcodes/preview-new.html
+++ b/layouts/shortcodes/preview-new.html
@@ -1,11 +1,8 @@
 <!-- This shortcode creates a general documentation preview box. -->
 
-<div style="border:2px solid #be1414; border-radius: 6px; margin: 8px 0px; background-color: #faf2f2;">
-    <p style="margin:8px 8px 8px 8px"><img src = "/img/icons/important-icon.svg" alt="icon important" style="display:inline; width:18pt; height:18pt; float:left; margin:0 8px 0 0"/> 
-        <span>
-            <strong>Preview documentation:</strong> This topic is a preview. The information contained on this page 
-            might not reflect the current or final state of UX, UI, or functionality of the described feature(s).  To report issues and  
-            errors, or to make documentation requests, please open a <a href="https://github.com/o3de/o3de.org/issues">GitHub issue here</a>.
-        </span>
-    </p>
-</div>
+<blockquote class="important callout card border-danger">
+    <div class="row no-gutters">
+      <div class="col-md-2 bg-danger text-white p-2"><strong>Preview: </strong></div> 
+      <div class="col p-2">  {{ "This topic is provided as a preview. The information contained on this page might not reflect the current or final state of UX, UI, or functionality. The feature(s) described on this page might not be included in the initial Open 3D Engine offering. To report issues and errors, or to make documentation requests, please open a [GitHub issue here](https://github.com/o3de/o3de.org/issues)." | markdownify }}</div>
+    </div>
+</blockquote>
