--- a/layouts/shortcodes/caution.html
+++ b/layouts/shortcodes/caution.html
@@ -1,6 +1,6 @@
-<!-- This shortcode creates a warning callout. Any provided text will be enclosed in the box. -->
+<!-- This shortcode creates a caution callout. Any provided text will be enclosed in the box. -->
 
-<blockquote class="warning callout card border-warning">
+<blockquote class="caution callout card border-warning">
   <div class="row no-gutters">
     <div class="col-md-2 bg-warning text-white p-2"><strong>Caution: </strong></div> 
     <div class="col p-2">  {{ trim .Inner " \n" | markdownify }}</div>
