--- a/layouts/deadlink.html
+++ b/layouts/deadlink.html
@@ -3,7 +3,7 @@ title: Deadlink
 main_menu: false
 ---
 
-Hello, you've reched a dead link in the documentation. Sorry for the inconvenience! We've retired an old page from Lumberyard 1.x 
+Hello, you've reached a dead link in the documentation. Sorry for the inconvenience! We've retired an old page from Lumberyard 1.x 
 and haven't come up with a suitable replacement for Open 3D Engine yet. In order to get this resolved, please file a
 [GitHub Issue](https://github.com/o3de/o3de.org/issues). Make sure you:
 
