--- a/layouts/shortcodes/caution.html
+++ b/layouts/shortcodes/caution.html
@@ -1,4 +1,4 @@
-<!-- This shortcode creates a caution callout. Any provided text will be enclosed in the box. -->
+{{/* This shortcode creates a caution callout. Any provided text will be enclosed in the box. */}}
 
 <blockquote class="caution callout card border-warning">
   <div class="row no-gutters">
