--- a/layouts/shortcodes/important.html
+++ b/layouts/shortcodes/important.html
@@ -1,4 +1,4 @@
-<!-- This shortcode creates an important callout. Any provided text will be enclosed in the box. -->
+{{/* This shortcode creates an important callout. Any provided text will be enclosed in the box. */}}
 
 <blockquote class="important callout card border-danger">
     <div class="row no-gutters">
