--- a/layouts/shortcodes/preview-migrated.html
+++ b/layouts/shortcodes/preview-migrated.html
@@ -1,4 +1,4 @@
-<!-- This shortcode creates a preview box for migrated documentation that has not been updated. -->
+{{/* This shortcode creates a preview box for migrated documentation that has not been updated. */}}
 
 <blockquote class="important callout card border-danger">
     <div class="row no-gutters">
