--- a/layouts/shortcodes/preview-new.html
+++ b/layouts/shortcodes/preview-new.html
@@ -1,4 +1,4 @@
-<!-- This shortcode creates a general documentation preview box. -->
+{{/* This shortcode creates a general documentation preview box. */}}
 
 <blockquote class="important callout card border-danger">
     <div class="row no-gutters">
