--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,4 +1,4 @@
-<!-- This shortcode creates a note callout. Any provided text will be enclosed in the box. -->
+{{/* This shortcode creates a note callout. Any provided text will be enclosed in the box. */}}
 
 <blockquote class="warning callout card border-info">
   <div class="row no-gutters">
