--- a/layouts/partials/single-header.html
+++ b/layouts/partials/single-header.html
@@ -1,8 +1,8 @@
 <div class="row single-header">
-  <div class="col">
+  <div class="col-12 col-md-9">
     {{ partial "breadcrumb.html" . }}
   </div>
-  <div class="col col-12 col-xl-2">
+  <div class="col-12 col-md-3">
   {{ partial "github-edit.html" . }}
   </div>
 </div>
