--- a/layouts/partials/section-nav-recurse.html
+++ b/layouts/partials/section-nav-recurse.html
@@ -2,7 +2,7 @@
 
 {{ range .CurrentSection.Pages }}
 <ul class="section-nav-subsection collapse">
-  <li><a class="section-nav-link" href="{{ .Permalink }}"> 
+  <li>{{ if .IsSection }}<i id="docs-chevron" class="fas fa-chevron-right"></i> {{ end }}<a class="section-nav-link" href="{{ .Permalink }}"> 
     {{ .Page.LinkTitle | markdownify }}
     </a>
     {{ if .IsSection }}
