--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -5,7 +5,7 @@
 {{ $menu   := site.Menus.main }}
 
 <div class="main-navbar navbar navbar-dark navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{ $home }}">
         {{ if $logo }}
