--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -1,7 +1,7 @@
 {{ $title := site.Title }}
 {{ $desc  := site.Params.description | markdownify }}
-<div class="scalable d-flex align-items-center">
-  <div class="jumbotron hero">
+<div class="scalable home-hero d-flex align-items-center">
+  <div class="jumbotron hero-inner">
     <div class="container">
       <div class="row">
         <div class="col col-12 col-xl-7">
