--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,19 +1,13 @@
 {{ define "main" }}
-  <header>
-    <div>
-      {{ partial "single-header.html" . }}
-    </div>
-  </header>
   <div class="container">
       <section class="row">
         <section class="col col-8">
           <h1 class="title">{{ .Page.Title | markdownify }}</h1>
-          {{ partial "docs/content.html" . }}
-        </section>
-        <section class="col col-4">
-          {{ partial "section-nav.html" . }}
-          <hr />
-          {{ partial "docs/docs-nav.html" . }}
+          {{ with .Content }}
+          <div class="content">
+            {{ . }}
+          </div>
+          {{ end }}
         </section>
       </section>
     </div>
