--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -10,10 +10,10 @@
         <p class="desc">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et blandit ipsum. Proin luctus elit tortor, vitae iaculis magna sodales a. 
         </p>
-        <p class="buttons">
-          <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white">Windows</a>
-          <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white">OSX</a>
-          <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white">Linux</a>
+        <p id="download-page-buttons">
+          <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Windows">Windows</a>
+          <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Mac OS">OSX</a>
+          <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Linux">Linux</a>
         </p>
       </div>
     </div>
