--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -15,7 +15,7 @@
           {{ end }}
 
           <p class="buttons">
-            <a href="https://github.com/aws/o3de" class="my-3 mr-3 btn btn-lg text-white download-cta">Clone on GitHub</a>
+            <a href="https://github.com/aws-lumberyard/o3de" class="my-3 mr-3 btn btn-lg text-white download-cta">Clone on GitHub</a>
             <a href="/docs" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
           </p>
         </div>
