--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -228,6 +228,16 @@ $width: '59vw';
 
 // layouts/download/section.html 
 
+// layouts/community/section.html 
+
+.community-hero 
+  background-color: $o3de-darkblue  
+  color: $o3de-white
+  .social 
+    font-size: 4rem
+    .social-name 
+      font-size: 2rem
+
 // partials/download/hero.html 
 
 
