--- a/layouts/partials/blog/hero.html
+++ b/layouts/partials/blog/hero.html
@@ -1,5 +1,5 @@
 {{ $isPost := ne .File.BaseFileName "_index" }}
-  <div class="container bg-secondary text-light p-4 mb-3">
+  <div class="container p-4 mb-3">
       <h1>
         {{ .Title }}
       </h1>
