--- a/layouts/partials/blog/content.html
+++ b/layouts/partials/blog/content.html
@@ -8,7 +8,7 @@
 
       <a class="btn btn-primary" href="/blog">
         <span>
-          Back to blog
+          Back to blogs
         </span>
       </a>
     </div>
