--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -228,6 +228,19 @@ $width: '59vw';
 
 // layouts/download/section.html 
 
+// layouts/community/section.html 
+
+.community-hero 
+  filter: drop-shadow(0px 15px 15px rgba(0, 0, 0, 0.9))
+  background-color: $o3de-darkblue  
+  color: $o3de-white
+  height: 40vh
+  .icon 
+    font-size: 4rem
+  .social-name 
+    font-size: 1rem
+    vertical-align: text-top
+
 // partials/download/hero.html 
 
 
