Added docs contribution runbook and iniital very draft text for the front page.
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -5,10 +5,10 @@
     <div class="row">
       <div class="col col-12 text-center">
         <h1 class="title">
-          Download
+          Download Open 3D Engine
         </h1>
         <p class="desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et blandit ipsum. Proin luctus elit tortor, vitae iaculis magna sodales a. 
+          Download the latest stable version of O3DE for your operating system. 
         </p>
         <p id="download-page-buttons">
           <a href="#" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Windows">Windows</a>
