--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col col-12">
         <h2>Get started with O3DE</h2>
-        <p class="subhead">Aenean aliquet tellus in malesuada interdum. Donec vel metus varius urna sodales pretium. </p>
+        <p class="subhead">Watch these video tutorials to get started with O3DE!</p>
       </div>
     </div>
     <div class="row home-videos">
@@ -11,7 +11,7 @@
         <div class="card">
           <img src="https://dummyimage.com/360x164/fff/aaa" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Video tutorial</h5>
+            <h5 class="card-title">Video tutorial 1</h5>
             <p class="card-text">Text TBD</p>
             <a href="#" class="btn btn-primary">Watch</a>
           </div>
@@ -21,7 +21,7 @@
         <div class="card">
           <img src="https://dummyimage.com/360x164/fff/aaa" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Video tutorial</h5>
+            <h5 class="card-title">Video tutorial 2</h5>
             <p class="card-text">Text TBD</p>
             <a href="#" class="btn btn-primary">Watch</a>
           </div>
@@ -31,7 +31,7 @@
         <div class="card">
           <img src="https://dummyimage.com/360x164/fff/aaa" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-title">Video tutorial</h5>
+            <h5 class="card-title">Video tutorial 3</h5>
             <p class="card-text">Text TBD</p>
             <a href="#" class="btn btn-primary">Watch</a>
           </div>
