Cleanup for front page typos
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -15,7 +15,7 @@
   <div class="row feature">
     <div class="col col-12 col-xl-7 pr-xl-5">
       <h2>Fully modular</h2>
-      <p>O3DE is built for extensibility and customization. Add new shaders, new editing tools, new feastures&mdash;and even new entirely new 
+      <p>O3DE is built for extensibility and customization. Add new shaders, new editing tools, new features&mdash;and even entirely new 
         development workflows to your O3DE-based project! Use established languages and tools like C++, CMake, and Qt to build atop O3DE with well-defined templates, styles,
         and interfaces. Develop new graphics models for the Atom renderer with the flexible shader and material systems. Use specialized components, 
         called "Gems", to add in the functionality you need&mdash;including both O3DE-developed features and 3rd party ones.
