--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col col-12">
-        <h2 class="text-center">O3DE is supported by our partners</h2>
+        <h2 class="text-center">O3DE is supported by our partners:</h2>
       </div>
     </div>
     <div class="row">
