[WIP] testing small changes in deploy DO NOT MERGE
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
         </p>
         <p>&copy; {{ $year }} The Linux Foundation. All rights reserved. 
           The Linux Foundation has registered trademarks and uses trademarks. 
-          For a list of trademarks of The Linux Foundation, please see our <a href="https://www.linuxfoundation.org/trademark-usage" target="_blank">Trademark Usage</a> page.</p>
+          For a list of trademarks of The Linux Foundation, please see our <a href="https://www.linuxfoundation.org/trademark-usage" target="_blank">Trademark Policy</a> page.</p>
       </div>
       <div class="col col-12 col-xl-4">
         <div class="float-right">
